[gd_scene load_steps=6 format=3 uid="uid://tcw2mmfv8vct"]

[ext_resource type="Script" path="res://Scenes/OSRoot/parts/OS/Taskbar/taskbar.gd" id="1_eg3xy"]
[ext_resource type="PackedScene" uid="uid://c2137vkv86l50" path="res://Scenes/OSRoot/parts/OS/Taskbar/parts/TitleBar/TitleBar.tscn" id="2_y8mwm"]
[ext_resource type="PackedScene" uid="uid://cieqo2p3d5xly" path="res://Scenes/OSRoot/parts/OS/Taskbar/parts/MediaPlayer/MediaPlayer.tscn" id="3_7up16"]
[ext_resource type="PackedScene" uid="uid://dqoykb187y44p" path="res://Scenes/OSRoot/parts/OS/Taskbar/parts/TimeAndSettings/TimeAndSettings.tscn" id="5_nn734"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uove6"]
bg_color = Color(0.0562916, 0.0562916, 0.0562916, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.529412, 0.278431, 1)

[node name="Taskbar" type="PanelContainer"]
custom_minimum_size = Vector2(0, 25)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_uove6")
script = ExtResource("1_eg3xy")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="LeftContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TitleBar" parent="MarginContainer/HBoxContainer/LeftContainer" instance=ExtResource("2_y8mwm")]
layout_mode = 2
title = "Memsoft Software"

[node name="RunningTasks" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="RightContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MediaPlayer" parent="MarginContainer/HBoxContainer/RightContainer" instance=ExtResource("3_7up16")]
layout_mode = 2

[node name="TimeAndSettings" parent="MarginContainer/HBoxContainer/RightContainer" instance=ExtResource("5_nn734")]
layout_mode = 2
